// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TSLint Jest Runner failing fixture matches snapshot 1`] = `
Object {
  "console": null,
  "displayName": "TSLint",
  "failureMessage": Any<String>,
  "leaks": false,
  "numFailingTests": 1,
  "numPassingTests": 0,
  "numPendingTests": 0,
  "numTodoTests": 0,
  "openHandles": Array [],
  "perfStats": Any<Object>,
  "skipped": false,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "uncheckedKeys": Array [],
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testFilePath": Any<String>,
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "duration": 0,
      "failureMessages": Array [
        "Calls to 'console.log' are not allowed.",
      ],
      "fullName": undefined,
      "location": Object {
        "column": 4,
        "line": 2,
      },
      "numPassingAsserts": 0,
      "status": "failed",
      "title": "Calls to 'console.log' are not allowed.",
    },
  ],
}
`;

exports[`TSLint Jest Runner passing fixture matches snapshot 1`] = `
Object {
  "console": null,
  "displayName": "TSLint",
  "failureMessage": 0,
  "leaks": false,
  "numFailingTests": 0,
  "numPassingTests": 1,
  "numPendingTests": 0,
  "numTodoTests": 0,
  "openHandles": Array [],
  "perfStats": Any<Object>,
  "skipped": false,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "uncheckedKeys": Array [],
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testFilePath": Any<String>,
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "duration": 0,
      "failureMessages": Array [],
      "fullName": undefined,
      "location": undefined,
      "numPassingAsserts": 1,
      "status": "passed",
      "title": "",
    },
  ],
}
`;
